// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AccordionHeader /> properly renders an accordion header 1`] = `
.emotion-4 {
  box-sizing: border-box;
  padding: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  background: #F2F2F2;
  border-bottom: 1px solid #E0E1E2;
}

section:last-child .emotion-4 {
  border-bottom: none;
}

.emotion-2 {
  font-family: Motiva Sans;
  color: #0F0F10;
  font-size: 1.125rem;
  font-weight: 600;
  margin-right: 1rem;
  line-height: 1.25;
  margin-bottom: calc(1.125rem * 0.5);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-bottom: 0;
}

.emotion-0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background: none;
  border: none;
  cursor: pointer;
  font-size: inherit;
  padding: 0;
}

<header
  className="emotion-4 emotion-5"
>
  <h1
    className="emotion-2 emotion-3"
    color="text.dark"
    fontSize="size4"
    fontWeight="medium"
  >
    <button
      aria-controls="my-accordion-1"
      aria-expanded={false}
      className="emotion-0 emotion-1"
      onClick={[Function]}
      type="button"
    >
      My Heading
    </button>
  </h1>
</header>
`;

exports[`<AccordionHeader /> renders with a note 1`] = `
.emotion-6 {
  box-sizing: border-box;
  padding: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  background: #F2F2F2;
  border-bottom: 1px solid #E0E1E2;
}

section:last-child .emotion-6 {
  border-bottom: none;
}

.emotion-2 {
  font-family: Motiva Sans;
  color: #0F0F10;
  font-size: 1.125rem;
  font-weight: 600;
  margin-right: 1rem;
  line-height: 1.25;
  margin-bottom: calc(1.125rem * 0.5);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-bottom: 0;
}

.emotion-0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background: none;
  border: none;
  cursor: pointer;
  font-size: inherit;
  padding: 0;
}

.emotion-4 {
  font-family: Motiva Sans;
  color: #5B5D61;
  font-size: 1.125rem;
  text-align: right;
}

<header
  className="emotion-6 emotion-7"
>
  <h1
    className="emotion-2 emotion-3"
    color="text.dark"
    fontSize="size4"
    fontWeight="medium"
  >
    <button
      aria-controls="my-accordion-1"
      aria-expanded={false}
      className="emotion-0 emotion-1"
      onClick={[Function]}
      type="button"
    >
      My Heading
    </button>
  </h1>
  <p
    className="emotion-4 emotion-5"
    color="text.muted"
    fontSize="size4"
  >
    My Accordion Section Note
  </p>
</header>
`;

exports[`<AccordionHeader /> renders with an on click 1`] = `
.emotion-4 {
  box-sizing: border-box;
  padding: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  background: #F2F2F2;
  border-bottom: 1px solid #E0E1E2;
}

section:last-child .emotion-4 {
  border-bottom: none;
}

.emotion-2 {
  font-family: Motiva Sans;
  color: #0F0F10;
  font-size: 1.125rem;
  font-weight: 600;
  margin-right: 1rem;
  line-height: 1.25;
  margin-bottom: calc(1.125rem * 0.5);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-bottom: 0;
}

.emotion-0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background: none;
  border: none;
  cursor: pointer;
  font-size: inherit;
  padding: 0;
}

<header
  className="emotion-4 emotion-5"
>
  <h1
    className="emotion-2 emotion-3"
    color="text.dark"
    fontSize="size4"
    fontWeight="medium"
  >
    <button
      aria-controls="my-accordion-1"
      aria-expanded={false}
      className="emotion-0 emotion-1"
      onClick={[MockFunction]}
      type="button"
    >
      My Heading
    </button>
  </h1>
</header>
`;

exports[`<AccordionHeader /> renders with the panel visible 1`] = `
.emotion-4 {
  box-sizing: border-box;
  padding: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  background: #F2F2F2;
  border-bottom: 1px solid #E0E1E2;
}

section:last-child .emotion-4 {
  border-bottom: none;
}

.emotion-2 {
  font-family: Motiva Sans;
  color: #0F0F10;
  font-size: 1.125rem;
  font-weight: 600;
  margin-right: 1rem;
  line-height: 1.25;
  margin-bottom: calc(1.125rem * 0.5);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-bottom: 0;
}

.emotion-0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background: none;
  border: none;
  cursor: pointer;
  font-size: inherit;
  padding: 0;
}

<header
  className="emotion-4 emotion-5"
>
  <h1
    className="emotion-2 emotion-3"
    color="text.dark"
    fontSize="size4"
    fontWeight="medium"
  >
    <button
      aria-controls="my-accordion-1"
      aria-expanded={true}
      className="emotion-0 emotion-1"
      onClick={[Function]}
      type="button"
    >
      My Heading
    </button>
  </h1>
</header>
`;
